k8s/devsu-demo-devops-nodejs/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-demo-devops-nodejs
  labels:
    app: devsu-demo-devops-nodejs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devsu-demo-devops-nodejs
  template:
    metadata:
      labels:
        app: devsu-demo-devops-nodejs
    spec:
      containers:
        - name: devsu-demo-devops-nodejs
          image: devsu-demo-devops-nodejs
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
