k8s/devsu-demo-devops-nodejs/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devsu-demo-devops-nodejs-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: devsu-demo-devops-nodejs
